[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AO_juan"
version = "0.0.1"
authors = [
{ name = "Juan David Munoz Bolanos", email = "jmunozbolanos@gmail.com"},
]
description = "Adaptive optics tools"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/spectramap/spectramap"
